* Renderer doesn't need an existing targetHtml nor defining one at all on creation. Member function setTargetHtml can be used to set and change target.
The Renderer either works directly with the specified element or (in case of specified via id) does an element lookup by id.
* Excel Report export moved to client side using FileSaver.js
* Remove client refresh on detail export which is not needed. Change context menue action from 
    <JavaScriptAction>bcdui._migPjs._$(this.eventSrcElement).trigger("cubeActions:contextMenuCubeClientRefresh", {actionId: 'exportWysiwygAsExcel'})</JavaScriptAction>
    to
    <JavaScriptAction>bcdui._migPjs._$(this.eventSrcElement).trigger("cubeActions:reportExport")</JavaScriptAction>

. Widgets
* periodChooser got new options: useSimpleXPath to use a straight forward xpath, autoPopup to directly show the popup calendar and suppressButtons to not show any buttons at all
* enableNavPath attribute to turn on/off navPath linkage (default is off (false))
* New widget: "slider", based on noUiSlider implementation
* Context menu: added support for multi-context, i.e. <div contextId="is-editable is-removable"></div>

. Core
* Promise polyfill: ecma6-promise (used for IE)
* Wrs: add support for JDBC SQLXML type
* SimpleModel: add saveChain/Parameters to be able to modify save actions
* DataProvider: added support for xpath with placeholders/fill parameters for query/queryNodes/read/write/remove operations. Mainly for handling quote/apostrophe issues when dynamically building up xPath Expressions
    Example: bcdui.wkModels.guiStatus.read("//guiStatus:ClientSettings/guiStatus:Test[@caption='{{=it[0]}}' and @caption2='{{=it[1]}}']", ["china's republic", "drag\"n drop"]);

. Themes
* new pageEffect bcdEffectPageStickyFooter

. Security
* client-controlled subject filters
** the new servlet-filter de.businesscode.bcdui.web.filters.SubjectSettingsFilter allows setting subject filters from client