@@ -21,7 +21,7 @@ Some changes are backward incompatible and may require code change in the projec
 * Renderer doesn't need an existing targetHtml nor defining one at all on creation. Member function setTargetHtml can be used to set and change target.
 The Renderer either works directly with the specified element or (in case of specified via id) does an element lookup by id.
 * Excel Report export moved to client side using FileSaver.js
-* Remove client refresh on detail export which is not needed. Change context menue action from 
+* Remove client refresh on detail export which is not needed. Change context menu action from
     <JavaScriptAction>bcdui._migPjs._$(this.eventSrcElement).trigger("cubeActions:contextMenuCubeClientRefresh", {actionId: 'exportWysiwygAsExcel'})</JavaScriptAction>
     to
     <JavaScriptAction>bcdui._migPjs._$(this.eventSrcElement).trigger("cubeActions:reportExport")</JavaScriptAction>
@@ -38,6 +38,7 @@ The Renderer either works directly with the specified element or (in case of spe
 * SimpleModel: add saveChain/Parameters to be able to modify save actions
 * DataProvider: added support for xpath with placeholders/fill parameters for query/queryNodes/read/write/remove operations. Mainly for handling quote/apostrophe issues when dynamically building up xPath Expressions
     Example: bcdui.wkModels.guiStatus.read("//guiStatus:ClientSettings/guiStatus:Test[@caption='{{=it[0]}}' and @caption2='{{=it[1]}}']", ["china's republic", "drag\"n drop"]);
+* BindingSet Relation added IsLike condition for joins
 
 . Themes
 * new pageEffect bcdEffectPageStickyFooter
@@ -65,10 +66,14 @@ The Renderer either works directly with the specified element or (in case of spe
 * Updated 3rd party jars (apache commons etc) to latest versions
 * Cube: for templateManager, RankingEditor or Summary, you need to include bcduiComponent in addition to bcduiCube. Symptom: _renderSummaryArea is undefined
 * Export: removed bcdui.component.exports.excel functions (detailExport, exportHTMLElement). Use bcdui.component.exports detailExport, exportWysiwygAsExcel functions.
-* Widgets: navpath generation is turned off by default, use widget's enableNavPath attribute to turn it on 
+* New entries for Eclipse injection to support ECMA5 transpiled sources, see Docu/development/eclipseInjected.xml
+* Widgets: navpath generation is turned off by default, use widget's enableNavPath attribute to turn it on
 * I18n
 ** the servlet de.businesscode.bcdui.web.i18n.I18nServlet must be registered in web.xml (and made accessible to public)
 ** the servlet filter de.businesscode.bcdui.web.filters.SubjectSettingsFilter must be registered to web.xml, right after security filter (i.e. shiro)
+** Add user_login to bcd_sec_user
+** If you want to use salted passwords, add password_salt to bcd_sec_user and salt existing passowrds
+** Also add bcdui/i18n/default/lang if you want another default language than en, see web.xml
 
 ==== Release 5_2_0
 
